--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "angular-cli-ghpages": "^1.0.6",
     "axios": "^1.4.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
