--- a/angular.json
+++ b/angular.json
@@ -16,6 +16,7 @@
             "outputPath": "dist/proyectoexamen",
             "index": "src/index.html",
             "main": "src/main.ts",
+            "baseHref": "./proyectoExamen/",
             "polyfills": [
               "zone.js"
             ],
